<resources>
    <string name="app_name">AppWmsBeiraRio</string>
    <string name="produce">PROD</string>
    <string name="development">HML</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha:</string>
    <string name="open_login">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consulte_um_c_digo_de_barras">Consulte um código de barras</string>
    <string name="nao_com_til">NÃO</string>
    <string name="armazenagem_cod_barras">ARMAZENGAGEM</string>
    <string name="nome_da_area_cod_barras">Nome da Área:</string>
    <string name="endere_o_visual_cod_barras">Endereço Visual:</string>
    <string name="volumes_cod_barras">Volumes</string>
    <string name="produtos_cod_barras">Produtos</string>
    <string name="ltimos_movimentos_cod_barras">Últimos Movimentos</string>
    <string name="ultimos_movimentos_cod_barras">ÚLTIMOS MOVIMENTOS</string>
    <string name="erro_ao_carregar_lista">Erro ao carregar lista!</string>
    <string name="list_emply_local">Lista de Localizações vazia!</string>
    <string name="list_emply">Sem itens a serem listados!</string>
    <string name="title_activity_separacao">SeparacaoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Avançar</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sucesso_create_task">Nova tarefa criada com sucesso!</string>
    <string name="create_new_task">Criando Nova tarefa</string>
    <string name="checking_user">Verificando usuário</string>
    <string name="finish_sucess">Finalizada com sucesso</string>
    <string name="click_select_item">Clique para selecionar</string>
    <string name="denied_information">Não foi possivel trazer as informações!</string>
    <string name="reimpressao_information">Nenhuma tarefa para impressão encontrada</string>
    <string name="code_invalidate">Código inválido</string>
    <string name="deseja_manter_endereço">Deseja alterar o endereço?</string>
    <string name="carregando">Carregando</string>
    <string name="title_activity_inventory_bottom_nav">InventoryBottomNavActivity</string>
    <string name="Corrugado_select">Corrugado Selecionado: \u2022 %1$d \u2022 PRS %2$d</string>
    <string name="selecione_qnt_para_numero">Selecione a Qnt de pares para Num \u2022 %1$d</string>
    <string name="quantidade_total_calcados_inventory">Total de pares:%1$d</string>
    <string name="selecione_o_tamanho">Selecione o Tamanho</string>
    <string name="adicionados">ADICIONADOS</string>
    <string name="adicionar">Adicionar</string>
    <string name="limpar_clear">Limpar</string>
    <string name="nao_adicionado">Ainda nao adicionado!</string>
    <string name="texto_select_corrugado">Selecione um corrugado</string>
    <string name="erroleituraQrCodeSnack">Ops!Tente novamente.</string>
    <string name="edit_emply">Campo Vazio!</string>
    <string name="etiquetagem_emissao">Emissão</string>
    <string name="txt_nota_fiscal_nf">NF</string>
    <string name="txt_volumes_txt">Volumes</string>
    <string name="txt_etiquetagem_pendentes">Pendentes</string>
    <string name="total_shoes_show">Total de pares adicionados:%1$d1 em corrugado:%1$d</string>
    <string name="impressoras_PRINTER">Impressoras</string>
    <string name="temperature">Temperatura</string>
    <string name="salvas_com_sucess">Configurações salvas com sucesso</string>
    <string name="select_all">Selecione todos</string>
    <string name="change_route">Alterar rota</string>
    <string name="picking_list_emply">Não há Picking a ser realizado</string>
    <string name="select_area">Selecione a área</string>
    <string name="distribuicao">Distribuição</string>
    <string name="embalagem">Embalagem</string>
    <string name="progress_loanding">Aguarde...</string>
    <string name="amount">Quantidade</string>
    <string name="amount_rec_product">Qnt</string>
    <string name="all_picking_sucess">Todos os Pickings foram realizados!</string>
    <string name="ponted_receipt">Apontados \u2022 %1$d</string>
    <string name="no_ponted_receipt">Não Apontados \u2022 %1$d</string>
    <string name="ponted">Apontados</string>
    <string name="no_ponted">Não Apontados</string>
    <string name="txt_finish_receipt">Finalize o recebimento..</string>
    <string name="select_printer">Deseja selecionar a impressora?</string>
    <string name="support_bluetooth">O dispositivo não é compatível com Bluetooth</string>
    <string name="printer_conect_sucess">Impressora conectada com sucesso!</string>
    <string name="bluetooh_emply">Nenhum dispositivo encontrado!</string>
    <string name="not_cali_printer">Não foi possível calibrar a impressora.</string>
    <string name="printing">Imprimindo…</string>
    <string name="alert_select_printer">Deseja selecionar uma impressora agora?</string>
    <string name="printers">Impressoras</string>
    <string name="Bluetooth_Enabled">Bluetooh Ativado</string>
    <string name="Bluetooth_no_Enabled">Bluetooh não Iniciado</string>
    <string name="Bluetooth_connection_canceled">Conecxao Bluettoh Cancelado</string>
    <string name="unable_to_connect">impossível conectar</string>
    <string name="get_dispositivo">Procure um dispositivo!</string>
    <string name="salving_settings">Salvando as Configurações</string>
    <string name="no_Printer_connected">Nenhuma Impressora conectada</string>
    <string name="connected_with_printer">Conectado com: %1$s</string>
    <string name="devices_Upcoming">Dispositivos próximos</string>
    <string name="not_task">Não há tarefas</string>
    <string name="reading_andress">Leia o endereço…</string>
    <string name="andress">Endereço</string>
    <string name="order">Pedido</string>
    <string name="programmed">Programado</string>
    <string name="Área_Arm">Área Arm.</string>
    <string name="click_store_order">Clique no pedido para armazenar</string>
    <string name="order_receipt2_toolbar">Pedido %1$s</string>
    <string name="not_operator_pendenc">Não há usuários com pendências</string>
    <string name="not_areas_dispo">Não há áreas disponíveis</string>
    <string name="areas_dispo">Selecione a área</string>
    <string name="date">Data</string>
    <string name="user">Usuário</string>
    <string name="supervisor_name">Supervisor %1$s</string>
    <string name="Pendence_operator">Pendência de %1$s </string>
    <string name="name_app">WMS</string>
    <string name="want_to_reprint_the_label">Deseja reimprimir esta etiqueta?</string>
    <string name="armazenado_sucess">Armazenado com sucesso!</string>
    <string name="printer_open">Imprimindo...</string>
    <string name="base_product">  Produção</string>
    <string name="base_development">  Desenvolvimento</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="search_printer">Procurar Impressora</string>
    <string name="search_devices_bluetooth">Buscando</string>
    <string name="button_devices_bluetooth">Buscar</string>
    <string name="reading_number_et">Leia um número de série:</string>
    <string name="reading_danfe_et">Leia a DANFE ou requisição:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="n_o_h_tarefas_de_montagem">Não há tarefas de montagem!</string>
    <string name="reanding_vol">Leia o volume</string>
    <string name="emply_list_product">Sem Produtos a serem listados!</string>
    <string name="emply_list_vol">Sem Volumes a serem listados!</string>
    <string name="num_serie">Número de Série</string>
    <string name="finish_audi_toolbar">Finalizar auditoria</string>
    <string name="printer_of_etiquetagem_modal">Antes de imprimir é preciso estar conectado a uma impressora!Deseja se conectar agora?</string>
    <string name="n_onda">N.Onda</string>
    <string name="adress_validad_armazenagem">Leia um endereço válido!</string>
    <string name="error_back_activity">Ops,erro inesperado!</string>
    <string name="theme">Tema</string>
    <string name="finish">Finalizar</string>
    <string name="txt_inf_reimpressao">Selecione o tipo de reimpressão que deseja realizar:</string>
    <string name="local_host">Local</string>
    <string name="dev">Dev</string>
    <string name="opao_mov1_dialog">Deseja remover a origem do endereço e apontar um novo?</string>
    <string name="reading_anddress_mov1">Leia um endereço:</string>
    <string name="finish_task">Tentando finalizar a tarefa!</string>
    <string name="cancel">Cancelar</string>
    <string name="reading_product">Leia um produto:</string>
    <string name="emply_task_mov_avulso">Não existem tarefas pendentes</string>
    <string name="validat_input">Verifique se o campo esta preenchido corretamente.</string>
    <string name="error_default">Ocorreu um erro inesperado.</string>
    <string name="error_calculate_total">Erro ao calcular totalizadores.</string>
    <string name="pendentes">Pendentes</string>
    <string name="apontados">Apontados</string>
    <string name="aprovedd">Aprovados</string>
    <string name="reprovedd">Reprovados</string>
    <string name="nf_or_request">Nf-e ou requisição</string>
</resources>