<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productionreceipt.fragments.ReceiptProductFragment1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:title="Recebimento de Produção" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_rceipt1"
        style="@style/edit_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reading_number_et"
        android:imeOptions="actionGo"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/list_emply" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_receipt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_rceipt1"
        tools:layout_editor_absoluteY="109dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_linear_cabeçalho_rv"
            android:text="@string/order" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_linear_cabeçalho_rv"
            android:text="@string/amount" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_linear_cabeçalho_rv"
            android:text="@string/programmed" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_linear_cabeçalho_rv"
            android:text="@string/Área_Arm" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_lottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/list_emply_box_yellow" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refles_rec_prod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_inf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_receipt1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReceipt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_inf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress"
            tools:itemCount="4"
            tools:listitem="@layout/item_receipt_product1" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:indeterminateTint="@color/color_default"
        android:max="@integer/material_motion_duration_long_2"
        android:min="@integer/material_motion_duration_medium_1"
        android:progress="@integer/material_motion_duration_long_2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_receipt1" />


</androidx.constraintlayout.widget.ConstraintLayout>