<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="04dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.consultacod.barras.EnderecoFragment">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_dados_rv_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="4"
                android:gravity="start"
                android:text="Tipo:" />

            <TextView
                android:id="@+id/it_tipo_cod_barras_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textAllCaps="true"
                tools:text="@tools:sample/full_names" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_dados_rv_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1.6"
                android:gravity="start"
                android:text="@string/nome_da_area_cod_barras" />

            <TextView
                android:id="@+id/it_nome_area_cod_barras_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textAllCaps="true"
                tools:text="@string/armazenagem_cod_barras" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_dados_rv_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="@string/endere_o_visual_cod_barras" />

            <TextView
                android:id="@+id/it_endereco_visual_cod_barras_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textAllCaps="true"
                tools:text="0112-E-003" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/volumes_endereco"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="04dp"
                android:layout_weight="1"
                android:textSize="13sp"
                android:text="@string/volumes_cod_barras" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/volumes_produto"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="04dp"
                android:layout_weight="1"
                android:textSize="13sp"
                android:text="@string/produtos_cod_barras"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/volumes_ultimos_movimentos"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="04dp"
                android:layout_weight="1"
                android:textSize="13sp"
                android:text="@string/ultimos_movimentos_cod_barras" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>